# LangGraph

./: .gitignore
DeepResearchApp/: main.py  pyproject.toml  web_operations.py
FastTuto/: main.py  pyproject.toml  test.db
FastTuto/app/: app.py  db.py  images.py  users.py
GitSearchApp/: github.py  main.py  note.py  notes.txt  requirements.txt
RAGProdApp/: data_loader.py  doc.txt  main.py  pyproject.toml  ser.py  vector_db.py
RAGProdApp/qdrant_storage/: raft_state.json
RAGProdApp/qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
RAGProdApp/qdrant_storage/collections/docs/0/segments/3fcebcdf-e066-474a-96a6-0218bc8f5ea9/: mutable_id_tracker.mappings
RAGProdApp/qdrant_storage/collections/docs/0/segments/def215bb-3839-4be5-81a6-acfd08351f45/: mutable_id_tracker.mappings
ResearchApp/advanced-agent/: main.py  pyproject.toml
ResearchApp/advanced-agent/src/: firecrawl.py  workflow.py
ResearchApp/simple-agent/: main.py  pyproject.toml
TripMate/: .dockerignore  Dockerfile  app.py  backend.py  docker-compose.yaml  main.py  pyproject.toml  test.py
TripMate/core/: config.py  database.py  security.py
TripMate/graph/: builder.py  nodes.py  state.py
TripMate/routes/: auth.py  travel.py
TripMate/schemas/: auth.py  travel.py
TripMate/services/: auth_service.py  travel_service.py
TripMate/static/: script.js  style.css
TripMate/templates/: index.html
TripMate/tools/: flight_tool.py  tavily_tool.py
first/: ReAct.py  agent_bot.py  requirements.txt
